force-app/main/default/objects/HS_Type__c/HS_Type__c.object-meta.xml
<CustomObject>
    <label>HS Code</label>
    <nameField>
        <label>HS Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HS Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>