force-app/main/default/objects/HS_Type__c/fields/Duty_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Duty_Rate_Type__c</fullName>
    <label>Duty Rate Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>