force-app/main/default/objects/HS_Type__c/fields/HS_Custom_Duty__c.field-meta.xml
<CustomField>
    <fullName>HS_Custom_Duty__c</fullName>
    <label>HS Custom Duty %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>