force-app/main/default/objects/HS_Type__c/fields/HS_Excise_Duty__c.field-meta.xml
<CustomField>
    <fullName>HS_Excise_Duty__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>HS Excise Duty %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>