force-app/main/default/objects/HS_Type__c/fields/HS_Type__c.field-meta.xml
<CustomField>
    <fullName>HS_Type__c</fullName>
    <label>HS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>