force-app/main/default/objects/HS_Type__c/fields/HS_Unit__c.field-meta.xml
<CustomField>
    <fullName>HS_Unit__c</fullName>
    <label>HS Unit</label>
    <length>8</length>
    <type>Text</type>
</CustomField>