force-app/main/default/objects/HS_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Description__c</columns>
    <columns>HS_Type__c</columns>
    <columns>HS_Unit__c</columns>
    <columns>Duty_Rate_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>